fix overflow in about section

--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,19 @@
   padding: 0;
   margin: 0; }
 
-html {
+:root {
   font-size: 62.50%; }
 
 body {
   padding: 0 4.5rem;
-  font-family: 'Open Sans', sans-serif; }
-  @media screen and (max-width: 1300px) {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.4rem; }
+  @media screen and (max-width: 130rem) {
     body {
       padding: 0; } }
 
 .btn {
-  color: #eee;
+  color: white;
   text-decoration: none;
   display: inline-block; }
 
@@ -37,8 +38,8 @@ body {
       font-size: 1.25rem; } }
   @media screen and (max-width: 650px) {
     .header .nav-main {
-      padding: 2.5rem 1rem;
-      justify-content: space-around; } }
+      padding: 2.5rem 0;
+      justify-content: space-evenly; } }
   .header .nav-main .logo-box {
     width: 7.832rem;
     height: 1.652rem; }
@@ -77,7 +78,7 @@ body {
 
 .header .text-box {
   height: 41.2rem;
-  background-image: linear-gradient(to right bottom, rgba(29, 31, 29, 0.549), rgba(14, 14, 14, 0.8)), url("../img/cico-hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(29, 31, 29, 0.549), rgba(14, 14, 14, 0.8)), url("../img/cico-hero.png");
   background-size: cover;
   background-position: center;
   color: white; }
@@ -141,7 +142,8 @@ body {
   padding: 7rem 7rem 4rem 7rem;
   text-align: center;
   margin-bottom: 3rem;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   @media screen and (max-width: 950px) {
     .section-about {
       height: 55rem;
