--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,57 +1,4 @@
-// @font-face {
-//   font-family: SegoeUI;
-//   src:
-//       local("Segoe UI Light"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf) format("truetype");
-//   font-weight: 100;
-// }
-
-// @font-face {
-//   font-family: SegoeUI;
-//   src:
-//       local("Segoe UI Semilight"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff2) format("woff2"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff) format("woff"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.ttf) format("truetype");
-//   font-weight: 200;
-// }
-
-// @font-face {
-//   font-family: SegoeUI;
-//   src:
-//       local("Segoe UI"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype");
-//   font-weight: 400;
-// }
-
-// @font-face {
-//   font-family: SegoeUI;
-//   src:
-//       local("Segoe UI Bold"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype");
-//   font-weight: 600;
-// }
-
-// @font-face {
-//   font-family: SegoeUI;
-//   src:
-//       local("Segoe UI Semibold"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
-//       url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype");
-//   font-weight: 700;
-// }
-
 //Basic CSS Reset
-//In a real project most of the these rules would live in different folder and scss files
-//I like to organize my CSS using the 7-1 CSS architecture leaving my main scss file to only
-//contain imports
 *, 
 *::after, 
 *::before {
@@ -60,28 +7,27 @@
   margin: 0;
 }
 
-html {
+:root {
   font-size: 62.50%;
 }
 
 body {
   padding: 0 4.5rem;
   font-family: 'Open Sans', sans-serif;
+  font-size: 1.4rem;
 
-  @media screen and (max-width: 1300px) {
+  @media screen and (max-width: 130rem) {
     padding: 0;
   }
 }
 
-//////COMPONENTS////////
-//Button component
+//Components
 .btn {
-  color: #eee;
+  color: rgb(255, 255, 255);
   text-decoration: none; 
   display: inline-block;
 }
 
-//Heading component - this is neccassary because this kind of heading appears more than once
 .section-heading {
   font-size: 1.9rem;
   text-decoration: underline;
@@ -103,8 +49,8 @@ body {
     }
 
     @media screen and (max-width: 650px) {
-      padding: 2.5rem 1rem; 
-      justify-content: space-around; 
+      padding: 2.5rem 0; 
+      justify-content: space-evenly; 
     }
 
     .logo-box {
@@ -182,7 +128,7 @@ body {
       rgba(29, 31, 29, 0.549),
       rgba(14, 14, 14, 0.8)
     ),
-    url('../img/cico-hero.jpg');
+    url('../img/cico-hero.png');
     background-size: cover;
     background-position: center;
     color: rgb(255, 255, 255); 
@@ -263,6 +209,7 @@ body {
   text-align: center;
   margin-bottom: 3rem;
   position: relative;
+  overflow: hidden;
 
   @media screen and (max-width: 950px) {
     height: 55rem;
